--- a/COVID 19 page.html
+++ b/COVID 19 page.html
@@ -6,8 +6,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="assets/css/bootstrap.css">
-<link rel="stylesheet" href="assets/css/ce-stylesc-19.css">
+<link rel="stylesheet" href="assets/css/to-styles.css">
 </head>
+
 
 <body>
 <div class="container">
@@ -17,14 +18,16 @@
         <div class="col-sm-3"></div>
         <div class="col-sm-3"></div>
     </div>
-    <div class="ce-header">
-              <img class="ce-one1" src="assets/imgs/Logo 3 1.png" alt="Luxuria Logo 1"> 
+    
+    <!--Header-->
+    <div class="to-header">
+              <img class="to-one1" src="assets/imgs/Logo 3 1.png" alt="Luxuria Logo 1"> 
     </div>
 
-    <!--Html Body-->
-    <div class="ce-body">
+    <!--Covid-19 message-->
+    <div class="to-body">
         <h1>Covid-19</h1>
-        <p class="ce-one">Do you have questions about the measures taken due to the coronavirus or future bookings? 
+        <p class="to-one">Do you have questions about the measures taken due to the coronavirus or future bookings? 
         <br>
         <br>
            We completely understand. We’ll do our best to help by answering the most received questions of this moment on this page.
@@ -38,16 +41,16 @@
         </p>
 
         <!--Logo Image-->
-        <img class="ce-two2" src="assets/imgs/Logo 3 3.png" alt="Luxuria logo 2">
+        <img class="to-two2" src="assets/imgs/Logo 3 3.png" alt="Luxuria logo 2">
 
         <!--FAQS-->
-        <p class="ce-two12">What measures does Luxuria take to guarantee safety?<i class="ce-arrow right"></i></p>
-        <p class="ce-three13">Is Luxuria Hotel still open? <i class="ce-arrow right"></i></p>
-        <p class="ce-four14">Can i get a refund? <i class="ce-arrow right"></i></p>
-        <p class="ce-five15">How can i change/cancel my reservation? <i class="ce-arrow right"></i></p>
+        <p class="to-two12">What measures does Luxuria take to guarantee safety?<i class="to-arrow right"></i></p>
+        <p class="to-three13">Is Luxuria Hotel still open? <i class="to-arrow right"></i></p>
+        <p class="to-four14">Can i get a refund? <i class="to-arrow right"></i></p>
+        <p class="to-five15">How can i change/cancel my reservation? <i class="to-arrow right"></i></p>
 
         <!--Search Field-->
-        <form class="ce-example" action="action_page.php">
+        <form class="to-example" action="action_page.php">
             <input type="text" placeholder="Type what are you are searching for..." name="search">
             <button type="submit"><i class="fa fa-search"></i></button>
         </form>
